# catalog

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mise.toml  .tool-versions  404.html  ARCHITECTURE-RECOMMENDATIONS.md  CLAUDE.md  DATA_LOADER_USAGE.md  DOCKER-SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.core  Dockerfile.db  Dockerfile.dev  Dockerfile.proposed  Dockerfile.test.yml  Dockerfile.tst  GEMINI-MODELS.md  GEMINI.md  GEOSPATIAL_ENHANCEMENTS.md  LLM_NEXT_STEPS.md  Makefile  OPTION-4-HYBRID-MONOREPO.md  QUERY_PLAN.md  QUERY_PLAN_SQLITE.md  README.md  README_RAG.md  SPATIAL_QUERY_IDEAS.md  TODO.md  ai_recommendations.md  api.py  build-all.sh  build-api.sh  build-cli.sh  build-core.sh  catalog.db  catalog.sql  (+47 more)
.devcontainer/: devcontainer.json
.docker/: Dockerfile  compose.test.yml  compose.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  deploy.yml.proposed  publish-docker.yml
ad-hoc-catalog/: index.html
api/: index.html  main.py
app/: README.md  compose.yml  dev.sql  test.out
app/config/: config.exs  dev.exs  test.exs
apps/catalog/: admin.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
architecture/: index.html
article-outline/: index.html
backend/: .env.leave  Dockerfile  Makefile  README.md  catalog.json  compose.yml  config.py  fsgeodata.html  main.py  models.py  requirements.txt
backend/alembic/: env.py
backend/main/: settings.py  urls.py
blog/: index.html
caddy/: Caddyfile
cli/: index.html
client/: .env.template  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  App.svelte  App.tsx  app.css  (+1 more)
crawlers/: mix.exs
data-harvesting/: index.html
data-lineage-plan/: index.html
data-sources/: index.html
data-storage/: index.html
demos/: index.html
disclaimer/: index.html
docs/: ListOfExistingCatalogs.xlsx  ad-hoc-catalog.md  api.md  architecture.md  cli.md  client.md  data-harvesting.md  data-lineage-plan.md  data-sources.md  data-storage.md  demos.md  eainfo-data-model.md  edw-metadata-flow.md  harvesting.md  index.md  llm.md  metadata-sources.md  methods-section.md  methods.md  prompts.md  rag-usage-guide.md  schema_parser_testing.md  use_case_examples.md  vision.md  xml-parsing-comparison.md
eainfo-data-model/: index.html
edw-metadata-flow/: index.html
enhancements/: index.html
harvesting/: index.html
init-scripts/: 001-init-pg.sql
linkedin/: intro-post.md
llm/: index.html
main/: __init__.py  app_catalog.json  catalog.json  pytest.ini  settings.py  urls.py
methods/: index.html
methods-section/: index.html
migrations/: 001_add_unique_constraint.sql
prompts/: blog.md  index.html
responses/: eainfo_database_storage.md  possible_improvements.md
schema_parser_testing/: index.html
search/: search_index.json
slclient/: app.py
src/: __init__.py  api.py  cli.py  db.py  llm.py
tests/: conftest.py  test_ai_search.py  test_api.py  test_api_main.py  test_eainfo.py  test_hybrid_search.py  test_lib.py  test_llm_client.py  test_llm_queries.py  test_query_classification.py  test_rag.py  test_rag_chatbot.py  test_search.py  test_semantic_search.py
vision/: index.html
xml-parsing-comparison/: index.html
(+512 files in other folders)
