[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catalog"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.3",
    # "pydantic>=2.0",
    # "python-dotenv>=1.0",
    # "rich>=14.0",
    # "requests>=2.32",
    # "lxml>=6.0",
    # "bs4>=0.0.2",
    # "chromadb>=1.4",
    # "rank-bm25>=0.2",
    # "ollama>=0.6",
    # "langchain-community>=0.4",
    # "langchain-litellm>=0.4",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=9.0",
    "pytest-sugar>=1.1",
    "ruff>=0.4",
    "pre-commit>=4.0",
]

[project.scripts]
# catalog = "catalog.cli:main"
catalog = "catalog.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
